--- a/STM32F_Hardware_Control/.cproject
+++ b/STM32F_Hardware_Control/.cproject
@@ -38,7 +38,7 @@
 									<listOptionValue builtIn="false" value="../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy" />
 									<listOptionValue builtIn="false" value="../Drivers/CMSIS/Device/ST/STM32F4xx/Include" />
 									<listOptionValue builtIn="false" value="../Drivers/CMSIS/Include" />
-									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/AriHockey/AHockey_Inc}&quot;" />
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Air_Hockey/AHockey_Inc}&quot;" />
 								</option>
 								<option id="gnu.c.compiler.option.preprocessor.def.symbols.964157179" name="Defined symbols (-D)" superClass="gnu.c.compiler.option.preprocessor.def.symbols" useByScannerDiscovery="false" valueType="definedSymbols">
 									<listOptionValue builtIn="false" value="__weak=__attribute__((weak))" />
